import React from 'react';
import { shallow } from 'enzyme';
import { Dashboard, mapStateToProps, mapDispatchToProps } from './Dashboard';
import { setCurrentUser } from '../../actions';

describe('Dashboard', () => {
  it('should match the snapshot if pathname is dashboard', () => {
    let wrapper;
    const mockLocation = {
      pathname: '/dashboard',
      search: '',
      hash: ''
    };

    wrapper = shallow(<Dashboard location={mockLocation} />);
    expect(wrapper).toMatchSnapshot();
  });
});
it('should match the snapshot if pathname is not dashboard', () => {
  let wrapper;
  const mockLocation = {
    pathname: '/',
    search: '',
    hash: ''
  };

  wrapper = shallow(<Dashboard location={mockLocation} />);
  expect(wrapper).toMatchSnapshot();
});

describe('mapStateToProps', () => {
  it('should return an object with a currentUser object', () => {
    const mockCurrentUser = {
      id: 75,
      firstName: 'Cody',
      lastName: 'Taft',
      phoneNumber: '+19038511575',
      email: 'cody.taft@gmail.com',
      password: '123',
      contactName: 'Gaynell',
      contactPhone: '+17203304593',
      isElder: false
    };
    const mockState = {
      currentUser: { ...mockCurrentUser }
    };

    const expected = {
      currentUser: {
        id: 75,
        firstName: 'Cody',
        lastName: 'Taft',
        phoneNumber: '+19038511575',
        email: 'cody.taft@gmail.com',
        password: '123',
        contactName: 'Gaynell',
        contactPhone: '+17203304593',
        isElder: false
      }
    };
    const mappedProps = mapStateToProps(mockState);
    expect(mappedProps).toEqual(expected);
  });
});

describe('mapDispatchToProps', () => {
  it('should invoke dispatch when using a function from mapDispatchToProps', () => {
    const mockCurrentUser = {
      id: 75,
      firstName: 'Cody',
      lastName: 'Taft',
      phoneNumber: '+19038511575',
      email: 'cody.taft@gmail.com',
      password: '123',
      contactName: 'Gaynell',
      contactPhone: '+17203304593',
      isElder: false
    };
    const mockDispatch = jest.fn();
    const actionToDispatch = setCurrentUser(mockCurrentUser);

    const mappedProps = mapDispatchToProps(mockDispatch);
    mappedProps.setCurrentUser(mockCurrentUser);

    expect(mockDispatch).toHaveBeenCalledWith(actionToDispatch);
  });
});
